--- a/WebApp/Views/Transactions/Index.cshtml
+++ b/WebApp/Views/Transactions/Index.cshtml
@@ -2,7 +2,7 @@
 @model TransactionsViewModel
 
 @section title {
-    <h3>Transactions Report</h3>
+    <h3>Report Transacções</h3>
 }
 
 <div id="printarea">
@@ -36,14 +36,14 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th>Date Time</th>
-                    <th>Cashier Name</th>
-                    <th>Product Name</th>
-                    <th>Qty Before</th>
-                    <th>Qty Sold</th>
-                    <th>Qty After</th>
-                    <th>Price</th>
-                    <th>Sold Amt</th>
+                    <th>Data Tempo</th>
+                    <th>Cashier Nome</th>
+                    <th>Producto Nome</th>
+                    <th>Quantidade Antes</th>
+                    <th>Quantidade Vendida</th>
+                    <th>Quantidade Depois</th>
+                    <th>Preço</th>
+                    <th>Vendido</th>
                 </tr>
             </thead>
             <tbody>
