--- a/WebApp/Views/Categories/Index.cshtml
+++ b/WebApp/Views/Categories/Index.cshtml
@@ -21,8 +21,8 @@
                 <tr>
                     <td>@category.Name</td>
                     <td>@category.Description</td>
-                    <td><a class="btn btn-primary" asp-controller="categories" asp-action="edit" asp-route-id="@category.CategoryId">Edit</a></td>
-                    <td><a class="btn btn-danger" asp-controller="categories" asp-action="delete" asp-route-categoryid="@category.CategoryId" onclick="return confirmDelete()">Delete</a></td>
+                    <td><a class="btn btn-primary" asp-controller="categories" asp-action="edit" asp-route-id="@category.CategoryId">Editar</a></td>
+                    <td><a class="btn btn-danger" asp-controller="categories" asp-action="delete" asp-route-categoryid="@category.CategoryId" onclick="return confirmDelete()">Apagar</a></td>
                 </tr>
             }
         </tbody>
@@ -31,12 +31,12 @@
 }
 
 <br />
-<a class="btn btn-success" asp-controller="categories" asp-action="add">Add</a>
+<a class="btn btn-success" asp-controller="categories" asp-action="add">Adicionar</a>
 
 @section Scripts{
     <script>
         function confirmDelete(){
-            return confirm("Are you sure you want to delete this category?");
+            return confirm("Tem mesmo a Certeza?");
         }
     </script>
 }
