--- a/WebApp/Views/Products/Index.cshtml
+++ b/WebApp/Views/Products/Index.cshtml
@@ -9,10 +9,10 @@
     <table class="table table-striped">
         <thead>
             <tr>      
-                <th>Category Name</th>
-                <th>Product Name</th>
-                <th>Price</th>
-                <th>Quantity</th>      
+                <th>Categoria Nome</th>
+                <th>Producto Nome</th>
+                <th>Preço</th>
+                <th>Quantidade</th>      
                 <th></th>
                 <th></th>
             </tr>
@@ -25,8 +25,8 @@
                     <td>@product.Name</td>
                     <td>@product.Price?.ToString("c")</td>
                     <td>@product.Quantity</td>
-                    <td><a class="btn btn-primary" asp-controller="products" asp-action="edit" asp-route-id="@product.ProductId">Edit</a></td>
-                    <td><a class="btn btn-danger" asp-controller="products" asp-action="delete" asp-route-id="@product.ProductId" onclick="return confirmDelete()">Delete</a></td>
+                    <td><a class="btn btn-primary" asp-controller="products" asp-action="edit" asp-route-id="@product.ProductId">Editar</a></td>
+                    <td><a class="btn btn-danger" asp-controller="products" asp-action="delete" asp-route-id="@product.ProductId" onclick="return confirmDelete()">Apagar</a></td>
                 </tr>
             }
         </tbody>
@@ -34,12 +34,12 @@
 }
 
 <br />
-<a class="btn btn-success" asp-controller="products" asp-action="add">Add</a>
+<a class="btn btn-success" asp-controller="products" asp-action="add">Adicionar</a>
 
 @section Scripts{
     <script>
         function confirmDelete() {
-            return confirm("Are you sure you want to delete this product?");
+            return confirm("Tem mesmo a certeza?");
         }
     </script>
 }
