--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -22,16 +22,16 @@
                             <a class="nav-link text-dark" asp-controller="home" asp-action="index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="sales" asp-action="index">Sell</a>
+                            <a class="nav-link text-dark" asp-controller="sales" asp-action="index">Vender</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="categories" asp-action="index">Categories</a>
+                            <a class="nav-link text-dark" asp-controller="categories" asp-action="index">Categorias</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="products" asp-action="index">Products</a>
+                            <a class="nav-link text-dark" asp-controller="products" asp-action="index">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="transactions" asp-action="index">Transactions</a>
+                            <a class="nav-link text-dark" asp-controller="transactions" asp-action="index">Transacções</a>
                         </li>
                     </ul>
 
