--- a/WebApp/Views/Transactions/Index.cshtml
+++ b/WebApp/Views/Transactions/Index.cshtml
@@ -22,11 +22,11 @@
             </div>
             <div class="col-2">
                 <label>&nbsp;</label>
-                <button type="submit" class="btn btn-primary form-control">Search</button>
+                <button type="submit" class="btn btn-primary form-control">Procura</button>
             </div>
             <div class="col-2">
                 <label>&nbsp;</label>
-                <button id="print" type="button" class="btn btn-primary form-control">Print</button>
+                <button id="print" type="button" class="btn btn-primary form-control">Imprimir</button>
             </div>
         </div>
     </form>
