--- a/WebApp/Views/Sales/Index.cshtml
+++ b/WebApp/Views/Sales/Index.cshtml
@@ -3,7 +3,7 @@
 @section title {
     <div class="row">
         <div class="col-7"><h3>Consola Vendas</h3></div>
-        <div class="col-2"><label for="cashier">Cashier Name:</label></div>
+        <div class="col-2"><label for="cashier">Cashier Nome:</label></div>
         <div class="col-3">
             @* Display Cashier's name here *@
             @User?.Identity?.Name
