--- a/WebApp/Views/Sales/_Products.cshtml
+++ b/WebApp/Views/Sales/_Products.cshtml
@@ -5,8 +5,8 @@
     <table class="table table-striped">
         <thead>
             <tr>
-                <th>Product Name</th>
-                <th>Quantity</th>
+                <th>Nome Produto</th>
+                <th>Quantidade</th>
             </tr>
         </thead>
         <tbody>
