--- a/WebApp/Views/Shared/Components/Transactions/Default.cshtml
+++ b/WebApp/Views/Shared/Components/Transactions/Default.cshtml
@@ -3,13 +3,13 @@
 <table class="table">
     <thead>
         <tr>
-            <th>Cashier Name</th>
-            <th>Product Name</th>
-            <th>Date Time</th>
-            <th>Qty Before</th>
-            <th>Qty Sold</th>
-            <th>Qty After</th>
-            <th>Sold Amt</th>
+            <th>Cashier Nome</th>
+            <th>Producto</th>
+            <th>Data Hora</th>
+            <th>Quantidade Antes</th>
+            <th>Quantidade Vendida</th>
+            <th>Quantidade Depois</th>
+            <th>Vendas Quantidade</th>
         </tr>
     </thead>
     <tbody>
