--- a/WebApp/Views/Categories/Index.cshtml
+++ b/WebApp/Views/Categories/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<CoreBusiness.Category>
 
 @section title {
-    <h3>Categories</h3>
+    <h3>Categorias</h3>
 }
 
 @if (Model != null && Model.Count() > 0)
