--- a/WebApp/Views/Products/Index.cshtml
+++ b/WebApp/Views/Products/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<Product>
 
 @section title {
-    <h3>Products</h3>
+    <h3>Produtos</h3>
 }
 
 @if (Model != null && Model.Count() > 0)
