--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -49,6 +49,11 @@
             @RenderBody()
         </div>
     </div>
+    <br />
+    <footer class="border-top footer text-muted">
+        <div class="container">
+            © 2024 SUPERMAKET!!!
+        </div>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"
             integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
             crossorigin="anonymous"></script>
