--- a/WebApp/Views/Sales/Index.cshtml
+++ b/WebApp/Views/Sales/Index.cshtml
@@ -1,40 +1,33 @@
-﻿@model SalesViewModel
+﻿@model WebApp.ViewModels.SalesViewModel
 
 @section title {
     <div class="row">
         <div class="col-7"><h3>Consola Vendas</h3></div>
         <div class="col-2"><label for="cashier">Cashier Nome:</label></div>
         <div class="col-3">
-            @* Display Cashier's name here *@
-            @User?.Identity?.Name
+            <!-- Display Cashier's name dynamically from user login -->
+            @User.Identity.Name
         </div>
-    </div>    
+    </div>
 }
 
 <br />
 <div class="row">
     <div class="col-4">
         <div class="text-danger" asp-validation-summary="All"></div>
-        @* Category selection *@
-        <select asp-for="SelectedCategoryId" class="form-control">
+        <!-- Category selection -->
+        <select asp-for="SelectedCategoryId" asp-items="@(new SelectList(Model.Categories, "CategoryId", "Name"))" class="form-control">
             <option>- Por favor Selecione -</option>
-            @if (Model.Categories != null && Model.Categories.Count() > 0)
-            {
-                @foreach (var cat in Model.Categories)
-                {
-                    <option value="@cat.CategoryId">@cat.Name</option>
-                }
-            }
         </select>
         <br />
         <div id="productsPartial">
-            @* Product List *@
+            <!-- Product List will be loaded here -->
         </div>
         <br />
         <div id="productDetailPartial">
-            @* Product Details *@
+            <!-- Product Details will be loaded here -->
         </div>
-        @* Sales form *@
+        <!-- Sales form -->
         <form method="post" asp-controller="sales" asp-action="sell" id="formSale">
             <input asp-for="SelectedProductId" type="hidden" />
             <div class="form-group">
@@ -48,16 +41,15 @@
         </form>
     </div>
     <div class="col">
-        @* List of transactions *@
-
-        @await Component.InvokeAsync("Transactions", "Cashier1")
+        <!-- List of transactions -->
+        <!-- Dynamically pass the logged-in cashier's name to the component -->
+        @await Component.InvokeAsync("Transactions", new { cashierName = User.Identity.Name })
     </div>
 </div>
 
-@section Scripts{
+@section Scripts {
     <script>
         $(function () {
-
             // Initialize the form
             $("#formSale").hide();
             $("#QuantityToSell").val("");
@@ -70,11 +62,10 @@
 
             // Handle category selection
             $("#SelectedCategoryId").on("change", function () {
-                loadProducts($(this).val())
+                loadProducts($(this).val());
             });
 
             $("#productsPartial").on('click', '.product-row', function () {
-
                 // Highlight the row selected
                 $('.product-row').removeClass('highlight');
                 $(this).addClass('highlight');
@@ -82,8 +73,8 @@
                 // Get the product ID from the "product-id" attribute of the clicked row
                 var productId = $(this).attr('product-id');
 
-                // Load the details of the product in a partial view                
-                $("#productDetailPartial").load("/sales/SellProductPartial", { productId: productId});
+                // Load the details of the product in a partial view
+                $("#productDetailPartial").load("/sales/SellProductPartial", { productId: productId });
 
                 if (productId > 0) {
                     $("#SelectedProductId").val(productId);
@@ -94,7 +85,6 @@
                     $("#formSale").hide();
                 }
             });
-
         });
 
         function loadProducts(categoryId) {
@@ -102,5 +92,5 @@
             $("#productDetailPartial").html("");
             $("#formSale").hide();
         }
-    </script>    
+    </script>
 }
