--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -4,8 +4,17 @@
     <h1>BEM VINDO AO MELHOR SUPERMARKET OF THE WORLD!</h1>
 }
 
-<p>
-    <br />
-    Eu deveria de escrever algo de informativo aqui mas o gato comeu o index
-</p>
-    
+
+<div class="alert alert-success" role="alert">
+    <h4 class="alert-heading">Bem-vindo ao Melhor Supermercado do Mundo!</h4>
+    <p>Estamos felizes por tê-lo connosco! Utilize o sistema para gerir de forma eficiente os seus produtos, categorias e transações. Aqui estão algumas das funcionalidades disponíveis:</p>
+    <hr>
+    <ul>
+        <li><strong>Autenticação de Utilizadores:</strong> Proteja o seu sistema com um login e registo seguro.</li>
+        <li><strong>Gestão de Produtos:</strong> Adicione, edite e visualize todos os produtos disponíveis no seu supermercado.</li>
+        <li><strong>Processo de Compra:</strong> Realize vendas, verifique o stock e mantenha o inventário atualizado.</li>
+        <li><strong>Validação de Dados:</strong> Garanta a integridade dos dados com validações no lado do cliente e no servidor.</li>
+        <li><strong>Stored Procedures:</strong> Melhore a eficiência e o desempenho nas operações com a base de dados.</li>
+    </ul>
+    <p class="mb-0">Para começar, utilize o menu de navegação acima para aceder às diferentes secções do sistema.</p>
+</div>
