--- a/WebApp/Views/Categories/Add.cshtml
+++ b/WebApp/Views/Categories/Add.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CoreBusiness.Category
 
 @section title {    
-   <h3>Add Category</h3>    
+   <h3>Adicionar Categoria</h3>    
 }
 
 <partial name="_Category" model="@Model" />
