--- a/WebApp/Views/Products/Add.cshtml
+++ b/WebApp/Views/Products/Add.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ProductViewModel
 
 @section title {
-    <h3>Add Product</h3>
+    <h3>Adicionar Producto</h3>
 }
 
 <partial name="_Product" model="Model" />
